[package]
name = "orx-priority-queue"
version = "1.4.0"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "Priority queue traits and high performance d-ary heap implementations."
license = "MIT"
repository = "https://github.com/orxfun/orx-priority-queue/"
keywords = ["priority", "queue", "heap", "dary", "binary"]
categories = ["algorithms", "data-structures", "mathematics", "no-std"]

[features]
default = ["std"]
std = []
impl_priority_queue = ["priority-queue"]

[dependencies]
priority-queue = { version = "2.0", optional = true }


[[bench]]
name = "basic_queue"
harness = false

[dev-dependencies]
itertools = "0.11"
rand = "0.8"
rand_chacha = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
