[package]
name = "orx-priority-queue"
version = "1.6.0"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "Priority queue traits and high performance d-ary heap implementations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-priority-queue/"
keywords = ["priority", "queue", "heap", "dary", "binary"]
categories = ["algorithms", "data-structures", "mathematics", "no-std"]

[features]
default = ["std"]
std = []
impl_priority_queue = ["priority-queue"]

[dependencies]
priority-queue = { version = "2.1", optional = true }


[[bench]]
name = "basic_queue"
harness = false

[dev-dependencies]
itertools = "0.14"
rand = "0.9"
rand_chacha = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
