[package]
name = "orx-priority-queue"
version = "1.7.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
readme = "README.md"
description = "Priority queue traits and high performance d-ary heap implementations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-priority-queue/"
keywords = ["priority", "queue", "heap", "dary", "binary"]
categories = ["algorithms", "data-structures", "mathematics", "no-std"]
rust-version = "1.88"

[features]
default = ["std"]
std = []
impl_priority_queue = ["priority-queue"]
impl_all = ["impl_priority_queue"]

[dependencies]
priority-queue = { version = "2.3", optional = true }


[[bench]]
name = "basic_queue"
harness = false

[dev-dependencies]
itertools = "0.14"
rand = "0.9"
rand_chacha = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
