[package]
name = "orx-priority-queue"
version = "0.1.1"
edition = "2021"
authors = ["orxfun"]
description = "Priority queue traits and generalized d-ary heap implementations."
license = "MIT"
documentation = "https://docs.rs/orx-priority-queue/0.1.1/orx_priority_queue/"


[dependencies]

[dev-dependencies]
itertools = "0.11.0"
rand = "0.8.5"
